added a example dic of packages to be installed.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,25 @@
 ---
 # defaults file for gaming_desktop
+
+gaming_apps:
+   rpms:
+     - python-pip
+     - vim-common
+     - ruby
+     - python3
+   pip:
+     - virtualenv
+  ruby_gems:
+      - chef
+      - rbenv
+  virtualenvs:
+  - venv1:
+      path: /root/venv1
+      packages:
+        - ansible
+        - requests
+  - venv2
+      path: /home/mike/venv2
+      packages:
+         - fabric
+
