added a few more apps to the list.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,12 @@ gaming:
      - wine
      - dolphin-emu
      - zsh
+     - konversation
+     - flameshot
+     - git
+     - k3b
+     - vim
+
    git:
      - git@github.com:robbyrussell/oh-my-zsh.git
   ruby_gems:
